# ot-rtos

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  STYLE_GUIDE.md  make-pretty
.github/workflows/: build.yml
.travis/: script.sh
cmake/: arm-none-eabi.cmake
examples/apps/: CMakeLists.txt
examples/apps/aogh/: README.md  aogh.cpp
examples/apps/demo_101/: README.md  demo_101.cpp
examples/apps/include/google_cloud_iot/: mqtt_client.hpp
examples/apps/script/: generate_cloudiot_cfg.sh
examples/apps/test/: README.md  http.c  mqtt.cpp  tcp_utils.c  user.c  user.cpp  user.h
include/apps/google_cloud_iot/: client_cfg.h  mqtt_client.hpp
include/net/utils/: nat64_utils.h
include/openthread/: openthread-freertos.h
include/portable/: portable.h
ot_rtos/: CMakeLists.txt
ot_rtos/apps/: CMakeLists.txt
ot_rtos/apps/demo_101/: demo_101.cpp
ot_rtos/apps/script/: generate_cloudiot_cfg.sh
ot_rtos/apps/test/: README.md  http.c  mqtt.cpp  mqtt_client.hpp  tcp_utils.c  test_tasks.cpp
ot_rtos/cli/: CMakeLists.txt  io_redirect.c  main.c
ot_rtos/core/: CMakeLists.txt  netif.cpp  netif.h  openthread_freertos.c  otr_system.c  uart_lock.h
ot_rtos/core/portable/: portable.h
ot_rtos/net/: CMakeLists.txt
ot_rtos/net/utils/: CMakeLists.txt  nat64_utils.c  nat64_utils.h  time_ntp.cpp  time_ntp.h
ot_rtos/platform/: CMakeLists.txt
ot_rtos/platform/entropy/: CMakeLists.txt
script/: bootstrap  test
src/apps/cli/: main.c
src/core/: io_redirect.c  netif.cpp  netif.h  openthread_freertos.c  otr_system.c  otr_system.h  uart_lock.c  uart_lock.h
src/core/utils/: entropy_utils.c  entropy_utils.h
src/net/utils/: nat64_utils.c  time_ntp.cpp
